// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`theme generators should add colors foundation theme 1`] = `
"export const colors = {
  // Add new color gradient token, for example:
	// primary: {
	//	50: '#f6faff',
	//	100: '#d7e9fd',
	//	200: '#c0dcfc',
	//	300: '#a7cefb',
	//	400: '#8abdfa',
	//	500: '#68aaf8',
	//	600: '#3d92f6',
	//	700: '#0070f3',
	//	800: '#0064d8',
	//	900: '#0055b9',
	//},
};
"
`;

exports[`theme generators should add colors foundation theme 2`] = `
"import { extendTheme } from '@chakra-ui/react';

import { colors } from './foundations/colors';
// -- PLOP:IMPORT_FOUNDATION_THEME --

// -- PLOP:IMPORT_COMPONENT_THEME --

const overrides = {
	// -- PLOP:REGISTER_FOUNDATION_THEME --
	components: {
		// -- PLOP:REGISTER_COMPONENT_THEME --
	},
};

const theme = extendTheme(overrides);

export default theme;
"
`;

exports[`theme generators should init theme 1`] = `
"import { extendTheme } from '@chakra-ui/react';

// -- PLOP:IMPORT_FOUNDATION_THEME --

// -- PLOP:IMPORT_COMPONENT_THEME --

const overrides = {
	// -- PLOP:REGISTER_FOUNDATION_THEME --
	components: {
		// -- PLOP:REGISTER_COMPONENT_THEME --
	},
};

const theme = extendTheme(overrides);

export default theme;
"
`;
